--- a/UserData/.classpath
+++ b/UserData/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="D:/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/narendra/Downloads/mysql-connector-java-5.1.44.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
